Twice 'Open Source' was a bit much.

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 					<img src="opensource-logo.png" />
 				</div><!-- /col -->
 				<div class="col col-xs-7 text">
-					<h2>Open Source</h2>
+					<h2>Share alike!</h2>
 					<p><b>facebook button colorizer</b>, or fb-colorize for short,
 					is <a href="http://opensource.org">Open Source</a> software, 
 					distributed under the Creative Commons Attribution 3.0 <a 
